force-app/main/default/objects/Apttus_Config2__RelatedIncentive__c/Apttus_Config2__RelatedIncentive__c.object-meta.xml
<CustomObject>
    <description>Holds the relationships between incentives</description>
    <label>Related Incentive</label>
    <nameField>
        <displayFormat>RI-{000000}</displayFormat>
        <label>Related Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Incentives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>