force-app/main/default/objects/Apttus_Config2__RelatedIncentive__c/fields/Apttus_Config2__FromIncentiveId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__FromIncentiveId__c</fullName>
    <description>ID of the related incentive (from)</description>
    <inlineHelpText>ID of the related incentive (from)</inlineHelpText>
    <label>Related Incentive (From)</label>
    <referenceTo>Apttus_Config2__Incentive__c</referenceTo>
    <relationshipLabel>Related Incentives (From)</relationshipLabel>
    <relationshipName>RelatedIncentivesFrom</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>