force-app/main/default/objects/Apttus_Config2__RelatedIncentive__c/fields/Apttus_Config2__ToIncentiveId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ToIncentiveId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the related incentive (to)</description>
    <inlineHelpText>ID of the related incentive (to)</inlineHelpText>
    <label>Related Incentive (To)</label>
    <referenceTo>Apttus_Config2__Incentive__c</referenceTo>
    <relationshipLabel>Related Incentives (To)</relationshipLabel>
    <relationshipName>RelatedIncentivesTo2</relationshipName>
    <type>Lookup</type>
</CustomField>